--- a/BlockSettleSigner/signer.qrc
+++ b/BlockSettleSigner/signer.qrc
@@ -77,6 +77,7 @@
         <file>qml/BsControls/BSPasswordInputToken.qml</file>
         <file>qml/BsControls/BSPasswordInputAuthLeaf.qml</file>
         <file>qml/BsControls/BSPasswordInputEnableTrading.qml</file>
+        <file>qml/BsControls/BSPasswordInputPromoteWallet.qml</file>
         <file>qml/BsControls/BSPasswordInputSettlementLeaf.qml</file>
         <file>qml/StyledControls/CustomLabelCopyableValue.qml</file>
         <file>qml/BsControls/BSPasswordInputAutoSignDialog.qml</file>
