--- a/BlockSettleUILib/Settings/GeneralSettingsPage.ui
+++ b/BlockSettleUILib/Settings/GeneralSettingsPage.ui
@@ -17,7 +17,7 @@
     <x>0</x>
     <y>0</y>
     <width>842</width>
-    <height>529</height>
+    <height>568</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -80,6 +80,39 @@
          <string>Use detailed settlement dialog by default</string>
         </property>
        </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Default wallet</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="comboBox_defaultWallet"/>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>30</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
