--- a/BlockSettleUILib/Trading/RFQRequestWidget.ui
+++ b/BlockSettleUILib/Trading/RFQRequestWidget.ui
@@ -249,28 +249,7 @@
          <number>0</number>
         </property>
         <widget class="RFQShieldPage" name="shieldPage"/>
-        <widget class="QWidget" name="pageRFQ">
-         <layout class="QVBoxLayout" name="verticalLayout_5">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <property name="leftMargin">
-           <number>0</number>
-          </property>
-          <property name="topMargin">
-           <number>0</number>
-          </property>
-          <property name="rightMargin">
-           <number>0</number>
-          </property>
-          <property name="bottomMargin">
-           <number>0</number>
-          </property>
-          <item>
-           <widget class="RFQTicketXBT" name="pageRFQTicket" native="true"/>
-          </item>
-         </layout>
-        </widget>
+        <widget class="RFQTicketXBT" name="pageRFQTicket"/>
        </widget>
       </item>
      </layout>
