--- a/BlockSettleUILib/Trading/FuturesTicket.ui
+++ b/BlockSettleUILib/Trading/FuturesTicket.ui
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+***********************************************************************************
+* Copyright (C) 2020, BlockSettle AB
+* Distributed under the GNU Affero General Public License (AGPL v3)
+* See LICENSE or http://www.gnu.org/licenses/agpl.html
+*
+**********************************************************************************
+
+-->
 <ui version="4.0">
  <class>FuturesTicket</class>
  <widget class="QWidget" name="FuturesTicket">
@@ -77,7 +87,7 @@
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>QUOTE REQUEST</string>
+         <string>REQUEST FOR STREAM</string>
         </property>
         <property name="indent">
          <number>0</number>
