--- a/BlockSettleUILib/SeedDialog.ui
+++ b/BlockSettleUILib/SeedDialog.ui
@@ -294,6 +294,25 @@
                </widget>
               </item>
               <item>
+               <widget class="QLabel" name="label_3">
+                <property name="text">
+                 <string>12 words seed mnemonic representation:</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QTextEdit" name="textEdit12Words">
+                <property name="font">
+                 <font>
+                  <pointsize>17</pointsize>
+                 </font>
+                </property>
+                <property name="acceptRichText">
+                 <bool>false</bool>
+                </property>
+               </widget>
+              </item>
+              <item>
                <spacer name="verticalSpacer">
                 <property name="orientation">
                  <enum>Qt::Vertical</enum>
