Complete explorer impl

--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -19,6 +19,7 @@
         <file>qml/ExplorerEmpty.qml</file>
         <file>qml/ExplorerAddress.qml</file>
         <file>qml/ExplorerTX.qml</file>
+        <file>qml/ExplorerLoader.qml</file>
         <file>qml/SendPage.qml</file>
         <file>qml/SendAdvanced.qml</file>
         <file>qml/ReceivePage.qml</file>
