add skip verification

--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -75,5 +75,6 @@
         <file>qml/WalletSeedVerify.qml</file>
         <file>qml/StyledControls/CustomSeedTextInput.qml</file>
         <file>images/warning_icon.png</file>
+        <file>qml/WalletSeedSkipAccept.qml</file>
     </qresource>
 </RCC>
