--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -76,5 +76,8 @@
         <file>qml/StyledControls/CustomSeedTextInput.qml</file>
         <file>images/warning_icon.png</file>
         <file>qml/WalletSeedSkipAccept.qml</file>
+        <file>images/Eye_icon _unvisible.png</file>
+        <file>images/Eye_icon _visible.png</file>
+        <file>qml/ConfirmPassword.qml</file>
     </qresource>
 </RCC>
