--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -81,5 +81,12 @@
         <file>qml/ConfirmPassword.qml</file>
         <file>images/USB_icon_conn.png</file>
         <file>images/USB_icon_disconn.png</file>
+        <file>qml/ImportHardware.qml</file>
+        <file>qml/StyledControls/CustomTextSwitch.qml</file>
+        <file>images/wallet_file.png</file>
+        <file>images/file_drop.png</file>
+        <file>qml/ImportWatchingWallet.qml</file>
+        <file>images/folder_icon.png</file>
+        <file>images/File.png</file>
     </qresource>
 </RCC>
