add Success screen + add focus to buttons

--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -89,5 +89,7 @@
         <file>images/folder_icon.png</file>
         <file>images/File.png</file>
         <file>qml/ImportWallet.qml</file>
+        <file>images/success.png</file>
+        <file>qml/SuccessNewWallet.qml</file>
     </qresource>
 </RCC>
