qml: add PIN entries widget

--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -110,5 +110,7 @@
         <file>qml/Send/SignTransaction.qml</file>
         <file>images/paste_icon.png</file>
         <file>qml/StyledControls/CustomCompleterPopup.qml</file>
+        <file>qml/Pin/PinEntriesPopup.qml</file>
+        <file>qml/Pin/qmldir</file>
     </qresource>
 </RCC>
