--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -110,5 +110,6 @@
         <file>qml/Send/SignTransaction.qml</file>
         <file>images/paste_icon.png</file>
         <file>qml/StyledControls/CustomCompleterPopup.qml</file>
+        <file>qml/Send/AdvancedDetails.qml</file>
     </qresource>
 </RCC>
