--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -113,5 +113,14 @@
         <file>qml/Pin/PinEntriesPopup.qml</file>
         <file>qml/Pin/qmldir</file>
         <file>images/clear.png</file>
+
+        <file>qml/Overview/AddressesTableView.qml</file>
+        <file>qml/Overview/BalanceBar.qml</file>
+        <file>qml/Overview/BaseBalanceLabel.qml</file>
+        <file>qml/Overview/BaseCombobox.qml</file>
+        <file>qml/Overview/BaseWalletButton.qml</file>
+        <file>qml/Overview/OverviewPanel.qml</file>
+        <file>qml/Overview/OverviewWalletBar.qml</file>
+        <file>images/overview/copy_button.svg</file>
     </qresource>
 </RCC>
