--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -182,5 +182,9 @@
         <file>qml/WalletProperties/WalletSeedAuth.qml</file>
         <file>images/wallet_icon_warn.svg</file>
         <file>qml/StyledControls/CustomHorizontalHeaderView.qml</file>
+
+
+        <file>qml/Debug/main_debug.qml</file>
+        <file>qml/Debug/TerminalMainWindow.qml</file>
     </qresource>
 </RCC>
