--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -121,5 +121,23 @@
         <file>qml/Overview/OverviewWalletBar.qml</file>
         <file>images/overview/copy_button.svg</file>
         <file>qml/Pin/PasswordEntryPopup.qml</file>
+        <file>images/about.png</file>
+        <file>images/arrow.png</file>
+        <file>images/general.png</file>
+        <file>images/network.png</file>
+        <file>images/notification_critical.png</file>
+        <file>images/notification_info.png</file>
+        <file>images/notification_question.png</file>
+        <file>images/notification_success.png</file>
+        <file>images/notification_warning.png</file>
+        <file>images/delete.svg</file>
+        <file>images/plus.svg</file>
+        <file>qml/Settings/qmldir</file>
+        <file>qml/Settings/SettingsMenu.qml</file>
+        <file>qml/Settings/SettingsNetwork.qml</file>
+        <file>qml/Settings/SettingsPopup.qml</file>
+        <file>qml/StyledControls/CustomListItem.qml</file>
+        <file>qml/StyledControls/CustomListRadioButton.qml</file>
+        <file>qml/Settings/SettingsGeneral.qml</file>
     </qresource>
 </RCC>
