--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -179,5 +179,6 @@
         <file>qml/Settings/AddArmoryServer.qml</file>
         <file>images/delete_custom_server.svg</file>
         <file>qml/Settings/DeleteArmoryServer.qml</file>
+        <file>qml/Settings/ModifyArmoryServer.qml</file>
     </qresource>
 </RCC>
