--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -19,7 +19,6 @@
         <file>qml/ExplorerEmpty.qml</file>
         <file>qml/ExplorerAddress.qml</file>
         <file>qml/ExplorerTX.qml</file>
-        <file>qml/ExplorerLoader.qml</file>
         <file>qml/ImportSeedPhrase.qml</file>
         <file>qml/VerifyTX.qml</file>
         <file>qml/InfoBanner.qml</file>
@@ -181,5 +180,6 @@
         <file>qml/Settings/DeleteArmoryServer.qml</file>
         <file>qml/Settings/ModifyArmoryServer.qml</file>
         <file>qml/StyledControls/CustomTransactionsTableView.qml</file>
+        <file>fonts/Roboto-Regular.ttf</file>
     </qresource>
 </RCC>
