--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -203,5 +203,19 @@
         <file>qml/Plugins/SideShift/SideShiftBuyPage.qml</file>
         <file>qml/Plugins/SideShift/SideShiftCopyButton.qml</file>
         <file>images/sideshift_right_arrow.png</file>
+        <file>images/sideswap_plugin.png</file>
+        <file>images/leverex_plugin.png</file>
+        <file>qml/Plugins/SideSwap/SideSwapPopup.qml</file>
+        <file>qml/Plugins/SideSwap/SideSwapMainPage.qml</file>
+        <file>qml/Plugins/SideSwap/Controls/CurrencyLabel.qml</file>
+        <file>qml/Plugins/SideSwap/Controls/CustomButton.qml</file>
+        <file>qml/Plugins/SideSwap/Controls/CustomCombobox.qml</file>
+        <file>qml/Plugins/SideSwap/Controls/CustomSwitch.qml</file>
+        <file>qml/Plugins/SideSwap/Controls/CustomTextEdit.qml</file>
+        <file>qml/Plugins/SideSwap/Controls/IconButton.qml</file>
+        <file>qml/Plugins/SideSwap/Styles/qmldir</file>
+        <file>qml/Plugins/SideSwap/Styles/SideSwapStyles.qml</file>
+        <file>images/sideswap/btc_icon.svg</file>
+        <file>images/sideswap/lbtc_icon.svg</file>
     </qresource>
 </RCC>
