Sideshift plugin updates; advances tx max function

--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -205,7 +205,7 @@
         <file>qml/Plugins/SideShift/SideShiftMainPage.qml</file>
         <file>qml/Plugins/SideShift/SideShiftBuyPage.qml</file>
         <file>qml/Plugins/SideShift/SideShiftCopyButton.qml</file>
-        <file>images/sideshift_right_arrow.png</file>
+        <file>images/sideshift_right_arrow.svg</file>
         <file>images/sideswap_plugin.png</file>
         <file>images/leverex_plugin.png</file>
         <file>qml/Plugins/SideSwap/SideSwapPopup.qml</file>
