Fixed indent; updated private root key template

--- a/GUI/QtQuick/qtquick.qrc
+++ b/GUI/QtQuick/qtquick.qrc
@@ -223,6 +223,7 @@
         <file>qml/Plugins/SideSwap/SideSwapPegOut.qml</file>
         <file>qml/Plugins/SideSwap/SideSwapPegIn.qml</file>
         <file>images/import_icon.svg</file>
-        <file>images/RPK_template.png</file>
+        <file>images/RPK12.png</file>
+        <file>images/RPK24.png</file>
     </qresource>
 </RCC>
